css: Fix alignment of buttons in custom  profile options and some minimum changes

--- a/web/styles/modal.css
+++ b/web/styles/modal.css
@@ -436,7 +436,7 @@
 .modal_password_input,
 .modal_url_input,
 .modal_text_input {
-    padding: 4px 6px;
+    padding: 6px 7px;
     color: hsl(0deg 0% 33%);
     border-radius: 4px;
     border: 1px solid hsl(0deg 0% 80%);
@@ -444,7 +444,6 @@
     transition:
         border-color linear 0.2s,
         box-shadow linear 0.2s;
-    margin-bottom: 10px;
     width: 206px;
 
     &:focus {
